--- a/qa.html
+++ b/qa.html
@@ -135,7 +135,7 @@
     <footer class="py-5 text-center bg-secondary text-white">
         <p class="mb-0">Copyright © 2022 小懶蟲.All rights reserved.</p>
     </footer>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="./js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
