--- a/layout.html
+++ b/layout.html
@@ -55,7 +55,7 @@
   <footer class="py-5 text-center bg-secondary text-white">
     <p class="mb-0">Copyright © 2022 小懶蟲.All rights reserved.</p>
   </footer>
-
+  <script src="./js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
