--- a/index.html
+++ b/index.html
@@ -9,22 +9,21 @@
   <link rel="stylesheet" href="stylesheet/css/all.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet"> -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=The+Nautigal&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-  <style>
-    body {
-      font-family: 'Noto Sans TC', sans-serif;
-    }
-  </style>
-
 </head>
 
 <body>
   <!-- 導覽列 -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white">
     <div class="container">
-      <a class="navbar-brand" href="index.html">
-        <i class="bi bi-record-fill text-info"></i>小懶蟲</a>
+      <h2>
+        <a class="navbar-brand" href="index.html">
+          <i class="bi bi-record-fill text-info"></i>小懶蟲</a>
+      </h2>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -202,15 +201,14 @@
       <h2 class="text-center mb-4 fw-bold">需要其他協助嗎？</h2>
       <div class="row text-center justify-content-center g-4">
         <div class="col-lg-3">
-          <a href="#" class="btn shadow w-100 fs-4 py-3 px-5"><i
+          <a href="tel:+886-07-555-666" class="btn shadow w-100 fs-4 py-3"><i
               class="bi bi-telephone-fill text-info pe-2"></i>07-555-666</a>
-
         </div>
         <div class="col-lg-3">
-          <a href="#" class="btn shadow w-100 fs-4 py-3 px-5"><i class="bi bi-facebook text-info pe-2"></i>我就是個小懶蟲</a>
+          <a href="#" class="btn shadow w-100 fs-4 py-3"><i class="bi bi-facebook text-info pe-2"></i>我就是個小懶蟲</a>
         </div>
         <div class="col-lg-3">
-          <a href="#" class="btn shadow w-100 fs-4 py-3 px-5"><i class="bi bi-question text-info pe-2"></i>常見問題</a>
+          <a href="#" class="btn shadow w-100 fs-4 py-3"><i class="bi bi-question text-info pe-2"></i>常見問題</a>
         </div>
       </div>
     </div>
@@ -219,7 +217,7 @@
   <footer class="py-5 text-center bg-secondary text-white">
     <p class="mb-0">Copyright © 2022 小懶蟲.All rights reserved.</p>
   </footer>
-  <script src="./js/bootstrap.bundle.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
