--- a/qa.html
+++ b/qa.html
@@ -11,20 +11,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <style>
-        body {
-            font-family: 'Noto Sans TC', sans-serif;
-        }
-    </style>
-
 </head>
 
 <body>
     <!-- 導覽列 -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <i class="bi bi-record-fill text-info"></i>小懶蟲</a>
+            <h2>
+                <a class="navbar-brand" href="index.html">
+                    <i class="bi bi-record-fill text-info"></i>小懶蟲</a>
+            </h2>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -135,7 +131,7 @@
     <footer class="py-5 text-center bg-secondary text-white">
         <p class="mb-0">Copyright © 2022 小懶蟲.All rights reserved.</p>
     </footer>
-    <script src="./js/bootstrap.bundle.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
